styles/PortraitHUD.css
/*CHARACTER PORTRAIT CONTAINER*/
.portrait-hud {
    align-items: flex-end;
    background: transparent center top no-repeat;
    background-size: var(--ech-portrait-size);
    border: 1px solid transparent;
    backdrop-filter: blur(6px);
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-right: 115px;
    min-height: 375px;
    min-width: 375px;
    position: relative;
    transition: all 0.3s ease-in-out;
    pointer-events: all;
}

.portrait-stat-block {
    align-items: center;
    border: 1px solid transparent;
    display: flex;
    flex-direction: row;
    font-size: 1.25rem;
    font-weight: 900;
    justify-content: center;
    margin-bottom: -1px;
    padding: 0.75rem;
    position: relative;
}
.portrait-stat-block:not(.player-details):before{
    backdrop-filter: blur(6px);
    content: '';
    height: 100%;
    left: 0px;
    position: absolute;
    top: 0px;
    width: 100%;
    z-index: -1;
}
.portrait-stat-block [data-hp-value]:after {
    content: attr(data-hp-value);
}
.portrait-stat-block [data-hp-max]:after {
    content: attr(data-hp-max);
}
.portrait-stat-block [data-ac-value]:after {
    content: attr(data-ac-value);
}
.portrait-stat-block [data-spell-dc]:after {
    content: attr(data-spell-dc);
}
.portrait-stat-block.player-details {
    align-items: flex-start;
    border-width: 0px;
    backdrop-filter: none;
    display: flex;
    flex-direction: column;
    font-size: 1.5rem;
    left: 0px;
    margin-bottom: 0px;
    margin-left: 0rem;
    margin-top: auto;
    padding: 1rem;
    position: absolute;
    text-shadow: 0 0 black;
    top: 0px;
    width: 100%;
}
.portrait-stat-block.player-details.player-details-bottom {
    top: auto;
    bottom: 0px;
    z-index: -1;
    flex-direction: column-reverse;
    padding-bottom: 3.5rem;
    background: linear-gradient(0deg, rgba(65,75,85,0.9) 0%, rgba(70,80,90,0.8) 75%, rgba(75,85,95,0) 100%);
}

.portrait-stat-block.player-details .player-detail {
    font-size: 1rem;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 100%;
    white-space: nowrap;
}

.player-buttons {
    display: flex;
    font-size: 2rem;
    height: 50px;
    justify-content: center;
    position: absolute;
    right: -115px;
    top: calc((-50px - 1rem - 37px));
}

.player-button {
  align-items: center;
  background: no-repeat center;
  background-origin: content-box;
  background-size: contain;
  cursor: pointer;
  display: flex;
  font-size: 1.5rem;
  height: 50px;
  justify-content: center;
  padding: 0.5rem;
  position: relative;
  width: 50px;
  
  pointer-events: all;
}
.player-button:before {
    backdrop-filter: blur(6px);
    content: '';
    height: 100%;
    left: 0px;
    position: absolute;
    top: 0px;
    width: 100%;
    z-index: -1;
}
.player-button.ech-close i {
    margin-top: -0.5rem;
}
.minimize-hud .player-button.ech-close i {
    transform: rotate(180deg);
    margin-top: 0.5rem;  
}

.ability-menu {
    bottom: 374px;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    font-size: 13px;
    left: 0px;
    position: absolute;
    width: 375px;
    pointer-events: all;
    z-index: 1000;
}
.ability-menu:before {
    backdrop-filter: blur(6px);
    border: 1px solid transparent;
    content: '';
    height: 100%;
    left: 0px;
    position: absolute;
    top: 0px;
    width: 100%;
    z-index: 0;
}
.ability-menu ul {
    font-size: 1rem;
    list-style: none;
    margin: 0px;
    height: 100%;
    max-height: 0px;
    overflow-y: auto;
    padding: 0px;
    opacity: 0.99;
    transition: all 0.3s ease-in-out;
}
.ability-menu ul > li {
    border-top: 1px solid transparent;
    display: flex;
    padding: 0.5rem 0.75rem;
}
.ability-menu ul > li:first-child {
    border-top-width: 0px;
}
.ability-menu ul > li.ability-title {
    font-weight: 900;
    padding-left: 1.3rem;
    text-transform: uppercase;
}
.ability-menu ul > li.ability-title > div {
    margin-left: auto;
}
.ability-menu ul > li.ability-title > div > span {
    width: 75px;
    display: inline-block;
    text-align: center; 
}
.ability-menu ul > li.proficiency-is-not-proficient:before,
.ability-menu ul > li.proficiency-is-half-proficiency:before,
.ability-menu ul > li.proficiency-is-proficient:before,
.ability-menu ul > li.proficiency-is-expertise:before {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font-family: "Font Awesome 5 Free";
    font-style: normal;
    text-rendering: auto;
    font-variant: normal;
    font-weight: 400;
    line-height: 1;

    content: "\f111"
}
.ability-menu ul > li.proficiency-is-half-proficiency:before {
    content: "\f042";
    font-weight: 900;
}
.ability-menu ul > li.proficiency-is-proficient:before {
    content: "\f00c";
    font-weight: 900;
}
.ability-menu ul > li.proficiency-is-expertise:before {
    content: "\f560";
    font-weight: 900;
}
.ability-menu ul > li .ability-code,
.ability-menu ul > li .ability-passive {
    opacity: 0.6;
    padding: 0rem 0.5rem;
    text-transform: uppercase;
}
.ability-menu ul > li .ability-code select {
    border-width: 0px;
    color: inherit;
    height: auto;  
    text-transform: uppercase;
}
.ability-menu ul > li .ability-code select:focus {
    box-shadow: none;
}
.ability-menu ul > li .ability-code select * {
    padding: 0.5rem 0.75rem;
}
.ability-menu ul > li .ability-name {
    flex: 1;
}
.ability-menu ul > li .ability-name:hover {
    cursor: pointer;
}
.ability-menu ul > li.is-save .ability-code,
.ability-menu ul > li.is-save .ability-passive {
    display: none;
}
.ability-menu ul > li.is-save .ability-name {
    padding-left: 1rem;
}
.ability-menu ul > li.is-save .ability-modifier {
    padding-right: 1rem;
}
.ability-menu ul > li.is-save > div {
    margin-left: auto;
}
.ability-menu ul > li.is-save > div > span {
    width: 75px;
    display: inline-block;
    text-align: center; 
}
.ability-menu ul > li.is-save > div > span:hover {
    cursor: pointer;
}

.ech-show-ability-menu .ability-menu ul:first-child {
    max-height: calc(100vh - (375px + 37px + 1rem));
}
.ability-menu ul.ability-toggle {
    max-height: 100%;
}
.ability-menu ul.ability-toggle li {
    border-top: 1px solid transparent;
    cursor: pointer;
}
.ability-menu ul.ability-toggle li:after {
    content: "\f13a";
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    font-family: "Font Awesome 5 Free";
    line-height: 1;
    font-weight: 900;
    position: absolute;
    right: 15px;
    transform: rotate(180deg);
    transition: all 0.3s ease-in-out;
}
.ech-show-ability-menu .ability-menu ul.ability-toggle li:after {
    transform: rotate(0deg);
}
/*.ability-menu ul:last-child > li:hover {
    filter:brightness(150%);
}*/

.weapon-sets {
    display: flex;
    flex-direction: row;
    position: absolute;
    top: calc((-50px - 37px - 1rem));
}

.weapon-set {
    align-items: center;
    backdrop-filter: blur(6px);
    border: 1px solid transparent;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-right: 0.75rem; 

    pointer-events: all;
}
.weapon-set:before {
    border-radius: 0%;
    border: 1px solid transparent;
    content: '';
    height: 0px;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    transition: all 0.1s ease-in-out;
    width: 0px;
}
.weapon-set:hover:before,
.weapon-set.active:before {
    border-radius: 50%;
    height: 25px;
    width: 25px;
}
.weapon-set.active:after {
    border-radius: 50%;
    content: '';
    height: 15px;
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 15px;
}
.weapon-set > .set {
    background: no-repeat center;
    background-origin: border-box;
    background-size: cover;
    height: 50px;
    min-width: 50px;
}

.weapon-set > .set.set-primary:before,
.weapon-set > .set.set-primary:after {
    border-left: 2px solid transparent;
    content: '';
    height: 25px;
    left: 50%;
    position: absolute;
    top: 0px;
    transform: translateX(-50%);
    width: 0px;
}
.weapon-set > .set.set-primary:after {
    transform: translate(-50%, 25px);
}
.weapon-set:hover > .set.set-primary:before,
.weapon-set:hover > .set.set-primary:after,
.weapon-set.active > .set.set-primary:before,
.weapon-set.active > .set.set-primary:after {
    height: 12.5px;
}
.weapon-set:hover > .set.set-primary:after,
.weapon-set.active > .set.set-primary:after {
    transform: translate(-50%, 37.5px);
}

.movement-hud {
    align-items: center;
    backdrop-filter: blur(6px);
    border: 1px solid transparent;
    display: flex;
    flex-direction: column;
    font-size: 1.5rem;
    height: 375px;
    justify-content: flex-end;
    left: 375px;
    padding: 1rem 0rem;
    position: absolute;
    text-align: center;
    top: 0px;
    width: 115px;

    pointer-events: all;
}
.movement-hud .movement-current,
.movement-hud i.fas {
    font-size: 1.8rem;
}
.movement-spaces {
    align-items: center;
    align-content: center;
    display: flex;
    flex-flow: wrap;
    flex-direction: column-reverse;
    margin-bottom: 0.5rem;
    max-height: 246px;
    width: 100%;
}
.movement-spaces .movement-space {
    border-radius: 3px;
    box-shadow: none;
    height: 25px;
    margin: 0.5rem 0.3rem;
    position: relative;
    transition: all 0.3s ease-in-out;
    max-width: 25px;
    width: 100%;
}

